# NI-SCR-assignment

./: README.md  project.html  project.ipynb  pyproject.toml
data/: ei_isen_m__custom_4569965_tabular.tsv  ei_isen_m__custom_4580131_linear.csv
