[tool.poetry]
name = "scr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
statsmodels = "^0.13.5"
pandas = "^1.5.2"
plotly = "^5.12.0"
tqdm = "^4.64.1"
jupyter = "^1.0.0"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
